--- a/src/main/resources/templates/login/registerUser.html
+++ b/src/main/resources/templates/login/registerUser.html
@@ -1,21 +1,21 @@
-<html xmlns:th="http://www.thymeleaf.org">
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Register User</title>
-</head>
-<body>
-<h2>User Registration:</h2>
-    <form action="registerUser" method="post">
-        <pre>
-        First Name: <input type="text" name="firstName"/>
-        Last Name:  <input type="text" name="lastName"/>
-        User Name: <input type="text" name="email"/>
-        Password: <input type="password" name="password"/>
-        Confirm Password: <input type="password" name="confirmPassword"/>
-        <input type="submit" value="register"/>
-        </pre>
-    </form>
-
-</body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Create Location</title>
+    </head>
+    <body>
+        <h2>User Registration:</h2>
+        <form action="registerUser" method="post">
+            <pre>
+                First Name: <input type="text" name="firstName"/>
+                Last Name:  <input type="text" name="lastName"/>
+                User Name: <input type="text" name="email"/>
+                Password: <input type="password" name="password"/>
+                Confirm Password: <input type="password" name="confirmPassword"/>
+                <input type="submit" value="register"/>
+            </pre>
+        </form>
+    </body>
 </html>
