--- a/src/main/resources/templates/login/loginUser.html
+++ b/src/main/resources/templates/login/loginUser.html
@@ -12,7 +12,7 @@
         Password:<input type="password" name="password"/>
         <input type="submit" value="login"/>
 
-         <p th:text="${msg}">
+         <p th:text="${message}">
         </pre>
         </form>
     </body>
