--- a/src/main/resources/templates/login/registerUser.html
+++ b/src/main/resources/templates/login/registerUser.html
@@ -7,14 +7,15 @@
     </head>
     <body>
         <h2>User Registration:</h2>
-        <form action="registerUser" method="post">
+        <form action="registered" method="post">
             <pre>
                 First Name: <input type="text" name="firstName"/>
                 Last Name:  <input type="text" name="lastName"/>
-                User Name: <input type="text" name="email"/>
+                Email: <input type="text" name="email"/>
                 Password: <input type="password" name="password"/>
                 Confirm Password: <input type="password" name="confirmPassword"/>
                 <input type="submit" value="register"/>
+                <p th:text="${message}">
             </pre>
         </form>
     </body>
