--- a/src/main/resources/templates/findFlights.html
+++ b/src/main/resources/templates/findFlights.html
@@ -8,9 +8,7 @@
         <form action="findFlights" method="post">
             From:<input type="text" name="from"/>
             To:<input type="text" name="to"/>
-            Departure Date:
-<!--            <input type="text" name="departureDate"/>-->
-            <input type="date" name="departureDate">
+            Departure Date: <input type="text" name="departureDate">
             <input type="submit" value="search"/>
         </form>
     </body>
