create role entity

--- a/src/main/resources/templates/addFlight.html
+++ b/src/main/resources/templates/addFlight.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Add Flight</title>
+<title>Admin: Add Flight</title>
 </head>
     <body>
         <h2>Add Flight: </h2>
